# icebucket

./: .gitignore  Cargo.toml  README.md  settings.json
icebucket-core/: Cargo.toml  sync.json
icebucket-core/src/: install.rs  logger.rs  main.rs  settings.rs  sync.rs
icebucket-core/src/services/: s3.rs
icebucket-core/wix/: License.rtf  main.wxs
icebucket-gui/: Cargo.toml
icebucket-gui/src/: main.rs  syncfunctions.rs
src/: install.rs  main.rs
