[package]
name = "icebucket"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.16"
aws-sdk-s3 = "1.75.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }
trayicon = "0.2"
winit = "0.30"
winreg = "0.52.0"
windows = { version = "0.52", features = ["Win32", "Win32_System", "Win32_System_Console", "Win32_System_Threading", "Win32_Foundation"] }
sha2 = "0.10.8"
