[package]
name = "icebucket-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ryankopf/icebucket"
authors = ["Ryan Kopf <icebucket@ryankopf.com>"]
license = "MIT"
description = "A graphical user interface for Icebucket"
homepage = "https://github.com/ryankopf/icebucket"
readme = "../README.md"
keywords = ["gui", "iced", "desktop"]
categories = ["gui", "command-line-utilities"]

[dependencies]
aws-config = "1.5.16"
aws-sdk-s3 = "1.75.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }
trayicon = "0.2"
winit = "0.30"
winreg = "0.52.0"
windows = { version = "0.52", features = ["Win32", "Win32_System", "Win32_System_Console", "Win32_System_Threading", "Win32_Foundation"] }
sha2 = "0.10.8"
sysinfo = "0.33.1"

icebucket-gui = { path = "../icebucket-gui" }